--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ momus/migrations/*
 migrations/
 migrations/*
 migrations
+uploads/
+uploads/*
+uploads
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
